@@ -48,6 +48,8 @@ You can find more information on how to setup Elasticsearch, how elements are ma
 - https://github.com/eclipse-syson/syson/issues/1942[#1942] [diagrams] Add _parts_ compartment on `PartDefintion`, `ConnectionDefinition`, `AllocationDefinition` and `InterfaceDefinition` graphical nodes.
 - https://github.com/eclipse-syson/syson/issues/1962[#1962] [diagrams] Add graphical edge tools to add an `AttributeUsage` as a nested attribute of a `Usage` or a `Definition`.
 Also, add a graphical edge tool to all `Usage` and `Definition` to make an `AttributeUsage` nested.
+- https://github.com/eclipse-syson/syson/issues/1649[#1649] [syson] Add support for publishing representations with libraries.
+Publishing a project that contains representations now produces libraries that also contain the representations.
 
 === New features
 
